# massive-octo-spice

./: .deps  .gitignore  .gitmodules  .issuetracker  .protocol_version  .travis.yml  .version  AUTHORS  ChangeLog  Makefile.am  README.md  THANKS  Vagrantfile  autogen.sh  config.layout  configure.ac  contributing.md  package.sh  provision.sh  vagrant_rebuild.sh  version.sh
.github/: issue_template.md
Docker/: Dockerfile  README.md  start_cifv2.sh
Docker/configs/: supervisord.conf
Docker/scripts/: foreground.sh  start.sh
ansible/: READMD.md  README.md  ansible.cfg  ansible_easybutton.sh  cif.yml  elasticsearch.yml  host_template.yml  hosts  localhost.yml  site.yml
ansible/old/: cif-ansible-host01.yml
contrib/: cif.psgi  client.conf  elasticsearch-remove-old-indicies.sh  group_testing.sh  kibana-dashboard.json  marvel.sh  migrate-data.pl  run_feeds.sh  whitelist_testing.sh
contrib/router/: cif-plack.in  cif.psgi  kibana-nginx.conf
docs/: README
elasticsearch/: Makefile.am  cif-template.json  feeds.json  map.json  observables.json  tokens.json
es/: Makefile.am
hacking/nginx/: cif.conf
hacking/provision/: cpanm.sh  perlbrew.sh
libcif/: .deps  MANIFEST.SKIP  Makefile.PL.in  Makefile.am  config.layout  configure.ac  cpanfile
libcif/lib/: CIF.pm  CIF.pm.in
libcif/lib/CIF/: Client.pm  EncoderFactory.pm  Generated.pm  Generated.pm.in  Logger.pm  Message.pm  MessageFactory.pm  MetaFactory.pm  Observable.pm  ObservableAddress.pm  ObservableAddressIP.pm  ObservableFactory.pm  Rule.pm  RuleFactory.pm
libcif/lib/CIF/Client/: Broker.pm  BrokerFactory.pm
libcif/lib/CIF/Client/Broker/: Dummy.pm  Http.pm  ZeroMQ.pm
libcif/lib/CIF/Encoder/: Json.pm
libcif/lib/CIF/Format/: Csv.pm  Snort.pm  Stix.pm  Table.pm
libcif/lib/CIF/Message/: Ping.pm  Query.pm  Submission.pm
libcif/lib/CIF/Meta/: BGP.pm  GeoIP.pm
libcif/lib/CIF/Observable/: Actor.pm  Email.pm  Fqdn.pm  Ipv4.pm
libcif/lib/CIF/Plugin/: Address.pm  DateTime.pm  Hash.pm
libcif/lib/CIF/Rule/: Default.pm  XPath.pm
libcif/lib/CIF/Type/: CountryCode.pm  DateTime.pm  Hash.pm  LowerCaseStr.pm  PortList.pm  Protocol.pm  RIR.pm  Tlp.pm  UpperCaseStr.pm  Uri.pm
libcif/m4/: layout.m4
libcif/t/: 00-basic.t  00-critic.t  00-taint.t  10-client.t  10-logger.t  10-messages.t  20-ping.t  20-query.t  20-token.t  30-client.t  40-observable.t  50-geoip.t
m4/: ax_check_group.m4  ax_check_user.m4  layout.m4
packaging/debian/default/: cif
packaging/debian/init.d/: cif-smrt
prep/: cpanm.sh  debian.sh  operatingsystem.sh  perlbrew.sh
provision/: cpanm.sh  debian.sh  perlbrew.sh  purge.sh  ubuntu.sh
puppet/manifests/: site.pp
router/: MANIFEST.SKIP  Makefile.PL.in  Makefile.am  cpanfile
router/contrib/: cif_plack_runner.pl
router/lib/CIF/: Router.pm  Storage.pm
router/lib/CIF/Router/: Auth.pm  RESTApp.pm  Request.pm  RequestFactory.pm
router/lib/CIF/Router/Auth/: Dummy.pm
router/lib/CIF/Router/Request/: Ping.pm  Query.pm  Search.pm  Submission.pm  Token.pm
router/lib/CIF/Storage/: Dummy.pm  ElasticSearch.pm  SQL.pm
router/t/: 00-basic.t  00-critic.t  10-auth.t  10-running.t  10-storage.t  20-auth.t  30-storage.t
sbin/: test-deps
schema/: Makefile.am  map.json
smrt/: Makefile.PL.in  Makefile.am  cpanfile
smrt/lib/CIF/: Smrt.pm
smrt/lib/CIF/Smrt/: Broker.pm  Fetcher.pm  FetcherFactory.pm  Handler.pm  ParserFactory.pm
smrt/lib/CIF/Smrt/Decoder/: Default.pm  Gzip.pm  Zip.pm
smrt/lib/CIF/Smrt/Fetcher/: File.pm  Uri.pm
smrt/lib/CIF/Smrt/Handler/: Default.pm  Irc.pm
smrt/lib/CIF/Smrt/Parser/: Default.pm  Text.pm  Xml.pm
smrt/rules/default/: 00_mirc_whitelist.cfg  alienvault.cfg  bruteforceblocker.cfg  cleanmx.cfg  drg.cfg  isc_sans_edu.cfg  malwaredomains.cfg  phishtank.cfg  shadowserver.cfg  spamhaus.cfg  sshbl.cfg
smrt/rules/example/: custom.cfg.example
smrt/t/: 00-basic.t  00-taint.t  10-drg.t  10-malc0de.t  10-mirc.t  10-phishtank.t  20-garwarn.t
smrt/testdata/dragonresearchgroup.org/: sshpwauth.txt
smrt/testdata/garwarn/: test.html
smrt/testdata/malc0de.com/: rss.xml
src/: MANIFEST.SKIP  Makefile.PL.in  cpanfile
src/lib/: CIF.pm
src/lib/CIF/: Client.pm  Encoder.pm  EncoderFactory.pm  Format.pm  FormatFactory.pm  Generated.pm  Generated.pm.in  Logger.pm  Message.pm  MessageFactory.pm  Meta.pm  MetaFactory.pm  Observable.pm  ObservableAddress.pm  ObservableAddressIP.pm  ObservableFactory.pm  REST.pm  Router.pm  Rule.pm  Smrt.pm  StorageFactory.pm  Type.pm  Worker.pm  WorkerFactory.pm  WorkerFqdn.pm  WorkerRole.pm
src/rules/default/: 00_alexa_whitelist.cfg  00_whitelist.cfg  00_whitelist.yml  1d4_us.yml  alexa.yml  alienvault.yml  aper.yml  arbor.yml  autoshun.yml  bambenekconsulting_com.yml  blocklist_de.yml  botscout.yml  bruteforceblocker.cfg  bruteforceblocker.yml  crimetracker_net.yml  csirtg_io.yml  dataplane.yml  drg.cfg  drg.yml  dshield.yml  emergingthreats.net  emergingthreats.yml  feodotracker.yml  haleys_org.yml  isc_sans_edu.yml  joxeankoret.yml  malc0de.cfg  malc0de.yml  malekal.yml  malwareblacklist.cfg  malwaredomainlist.cfg  malwaredomains.yml  mirc.yml  nothink_org.yml  openbl.yml  openphish.yml  packetmail.yml  palevotracker.yml  phishtank.cfg  phishtank.yml  (+11 more)
src/rules/disabled/: alienvault.yml  malekal.yml  shadowserver.cfg  spyeyetracker.yml  threatexpert.cfg  zeustracker.yml
src/rules/example/: alienvault.yml  arbor.yml  bambenekconsulting_com.yml  cif_example.yml  cleanmx.yml  csv_example.yml  cybercrime-tracker.yml  delim_example.yml  freeform.cfg.example  freeform.yml  garwarn.cfg.example  garwarn.yml  haleys_org.yml  hosts_file_net.yml  html_example.yml  (+17 more)
src/t/: 00-basic.t  00-crypto.t  00-dates.t  00-tokens.t  00-urls.t  10-client.t  10-logger.t  10-messages.t  10-simple_feed.t  10-worker.t  20-alexa.t  20-arborflux-xml.t  20-bambenek.t  20-blocklist_dt.t  20-drg.t  20-dshield.t  20-isc_sans_edu.t  20-malc0de.t  20-malwaredomains.t  20-mirc.t  20-observable.t  20-openbl.t  20-openphish.t  20-phishtank.t  20-ransomware.t  20-sslbl_abuse.t  20-zeustracker.t  50-router.t  60-freeform.t  60-passivedns.t
v1migration/: cpanfile
(+210 files in other folders)
